# utils

./: .gitignore  .gitmodules  0001-curl-needs-libssh_LIB.patch  0001-disable-zlib-test-example.patch  CMakeLists.txt  build-cpython.sh  curl_helper.cpp  curl_helper.h  debug_logger.c  debug_logger.h  downloaddeps.sh  file_change_notifier.cpp  file_change_notifier.h  file_utils.cpp  file_utils.h  install-libs.sh  json_gui_loader.cpp  json_gui_loader.h  json_utils.c  json_utils.h  language_translation.cpp  language_translation.h  python_wrapper.cpp  python_wrapper.h  rm-module.sh  rm-submodule.sh  scp_session.cpp  scp_session.h  simple_timer.cpp  simple_timer.h  ssh_session.cpp  ssh_session.h
cmake-modules/: FindOpenSSL.cmake  FindSDL2.cmake  FindZLIB.cmake  libssh-config.cmake  zlib-config.cmake
toolchains/: x86_64-w64-mingw32.cmake  x86_64-w64-mingw32.sh
translations/: ui-spanish.json
ui/: device_event_queue.cpp  device_event_queue.h  screen_button.cpp  screen_button.h  screen_manager.cpp  screen_manager.h  title_bar.cpp  title_bar.h  title_bar_icons.c
